Event_Volunteer_Management/unpackaged/objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer</label>
        <referenceTo>Volunteer__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment</label>
    <nameField>
        <displayFormat>AS-{000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>